--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: 함수형 프로그래밍과 개발
 email: tlonist.sang@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/Today-I-learned/" # the subpath of your site, e.g. /blog
 url: "https://tlonist-sang.github.io/Today-I-learned/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
