--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/Today-I-learned/" # the subpath of your site, e.g. /blog
 url: "https://tlonist-sang.github.io/Today-I-learned/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  tlonist-sang
 
 # Build settings
 theme: minima
